--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
   </section>
 
   <!-- Song Request -->
-<section id="song-request">
-  <h2>Request a Song</h2>
-  <form class="cc_request_form" data-username="petvoj" data-charset="CP1250" data-mount="/petvoj">
-    <input type="text" name="request[title]" placeholder="Enter song name..." required />
-    <div data-type="result"></div>
-    <button type="button" data-type="submit">Request Song</button>
-  </form>
-</section>
+  <section id="song-request">
+    <h2>Request a Song</h2>
+    <form class="cc_request_form" data-username="petvoj" data-charset="CP1250" data-mount="/petvoj">
+      <input type="text" name="request[title]" placeholder="Enter song name..." required />
+      <button type="submit" data-type="submit">Request Song</button>
+      <div data-type="result"></div>
+    </form>
+  </section>
 
   <!-- Stream Info -->
   <section id="stream-info">
