--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AutoDJ Song Selector</title>
     <link rel="stylesheet" href="style.css">
+    <script language="javascript" type="text/javascript" src="https://control.internet-radio.com:2199/system/request.js"></script>
 </head>
 <body>
     <header>
