--- a/index.html
+++ b/index.html
@@ -1,40 +1,124 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AutoDJ Song Selector</title>
-    <link rel="stylesheet" href="style.css">
-    <script language="javascript" type="text/javascript" src="https://control.internet-radio.com:2199/system/request.js"></script>
-    <script language="javascript" type="text/javascript" src="https://control.internet-radio.com:2199/system/ondemand.js"></script>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Song Request Form</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background-color: #2a2a72;
+      color: #fff;
+      margin: 0;
+      padding: 0;
+    }
+
+    .container {
+      max-width: 500px;
+      margin: 50px auto;
+      background-color: #3d3d8e;
+      padding: 20px;
+      border-radius: 10px;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    }
+
+    h1 {
+      text-align: center;
+      margin-bottom: 20px;
+      color: #00ff00;
+    }
+
+    label {
+      display: block;
+      margin-bottom: 5px;
+      font-weight: bold;
+    }
+
+    input[type="text"] {
+      width: 100%;
+      padding: 10px;
+      margin-bottom: 15px;
+      border: 1px solid #ccc;
+      border-radius: 5px;
+      font-size: 16px;
+    }
+
+    button {
+      width: 100%;
+      padding: 10px;
+      background-color: #00ff00;
+      color: #000;
+      border: none;
+      border-radius: 5px;
+      font-size: 16px;
+      cursor: pointer;
+    }
+
+    button:hover {
+      background-color: #00cc00;
+    }
+
+    .result-message {
+      margin-top: 10px;
+      padding: 10px;
+      border-radius: 5px;
+      display: none;
+    }
+
+    .success {
+      background-color: #4CAF50;
+      color: white;
+    }
+
+    .error {
+      background-color: #f44336;
+      color: white;
+    }
+  </style>
 </head>
 <body>
-    <header>
-        <h1>AutoDJ Song Selector</h1>
-    </header>
+  <div class="container">
+    <h1>Search and Request Songs</h1>
+    <form class="cc_request_form" data-username="petvoj" data-charset="CP1250" data-mount="/petvoj">
+      <label for="artist">Song artist (optional):</label>
+      <input type="text" id="artist" name="request[artist]" placeholder="Artist name (optional)" maxlength="127">
 
-    <section>
-        <h2>Search and Request Songs</h2>
-        <!-- Simplified Song Request Form -->
-        <form class="cc_request_form" data-username="petvoj" data-charset="CP1250" data-mount="/petvoj">
-            <div data-type="result" id="resultMessage"></div>
-            <label for="artistInput">Song artist:</label>
-            <input type="text" id="artistInput" name="request[artist]" placeholder="Artist name (optional)" maxlength="127">
-            <label for="titleInput">Song title:</label>
-            <input type="text" id="titleInput" name="request[title]" placeholder="Song title" maxlength="127">
-            <button type="button" id="submitRequest" data-type="submit">Submit song request</button>
-        </form>
-    </section>
+      <label for="title">Song title:</label>
+      <input type="text" id="title" name="request[title]" placeholder="Song title" maxlength="127" required>
 
-    <section>
-        <h2>On-Demand Playlist</h2>
-        <!-- Search Filter for On-Demand Content -->
-        <input type="text" id="filterInput" placeholder="Search songs..." oninput="filterSongs()">
-        <div class="cc_ondemand_content" data-username="petvoj" data-charset="CP1250" data-mount="/petvoj" id="onDemandContent">
-            Loading on-demand content...
-        </div>
-    </section>
+      <!-- Hidden email field with default value -->
+      <input type="hidden" name="request[email]" value="no-reply@example.com">
 
-    <script src="script.js"></script>
+      <button type="submit" data-type="submit">Submit song request</button>
+    </form>
+
+    <div class="result-message" id="resultMessage"></div>
+  </div>
+
+  <script language="javascript" type="text/javascript" src="https://control.internet-radio.com:2199/system/request.js"></script>
+  <script>
+    // JavaScript to handle submission and provide better user feedback
+    document.querySelector('.cc_request_form').addEventListener('submit', function (e) {
+      e.preventDefault(); // Prevent the default form submission
+
+      const resultMessage = document.getElementById('resultMessage');
+      resultMessage.style.display = 'none'; // Hide previous messages
+
+      // Simulate the request process
+      const artist = document.getElementById('artist').value || 'Unknown Artist';
+      const title = document.getElementById('title').value;
+
+      if (!title) {
+        resultMessage.textContent = 'Error: Please provide a song title!';
+        resultMessage.className = 'result-message error';
+        resultMessage.style.display = 'block';
+        return;
+      }
+
+      resultMessage.textContent = `Requesting song: "${title}" by ${artist}. Please wait...`;
+      resultMessage.className = 'result-message success';
+      resultMessage.style.display = 'block';
+    });
+  </script>
 </body>
 </html>
