--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 <body>
   <div class="container">
     <h1>Search and Request Songs</h1>
-    <form class="cc_request_form" data-username="petvoj" data-charset="CP1250" data-mount="/petvoj">
+    <form class="cc_request_form" data-username="petvoj" data-charset="CP1250" data-mount="/petvoj" id="songRequestForm">
       <label for="artist">Song artist (optional):</label>
       <input type="text" id="artist" name="request[artist]" placeholder="Artist name (optional)" maxlength="127">
 
@@ -98,7 +98,7 @@
   <script language="javascript" type="text/javascript" src="https://control.internet-radio.com:2199/system/request.js"></script>
   <script>
     // JavaScript to handle submission and provide better user feedback
-    document.querySelector('.cc_request_form').addEventListener('submit', function (e) {
+    document.querySelector('#songRequestForm').addEventListener('submit', function (e) {
       const resultMessage = document.getElementById('resultMessage');
       resultMessage.style.display = 'none'; // Hide previous messages
 
